[package]
name = "format_experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
#csv-core = { path = "csv-core", version = "0.1.11" }
csv-core = "0.1.11"
itoa = "1"
ryu = "1"
serde = { version = "1.0.55", features = ["derive"] }

[dev-dependencies]
serde = { version = "1.0.55", features = ["derive"] }
